# autiobook

./: .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  REQUIREMENTS.md  ROADMAP.md  fix_cast.py  pyproject.toml
BOOKS/: De-Viz_Zvezdnyy-put_55_Predatel.93346.fb2  De_Viz_Zvezdnyiy_put_32_Tsepnaya_ataka.93343.fb2  Dillard_Zvezdnyy-put-Deep-Space-9_1_Emissar.93353.fb2  Dueyn_Drug-moy-vrag-moy.121624.fb2  Dueyn_Mir_Spoka.121645.fb2  Dueyn_Zvezdnyiy_put_13_Izranennoe_nebo.14237.fb2  Fridman_Zvezdnyy-put_58_Liki-ognya.121666.fb2  Gilden_Zvezdnyy-Put-Novoe-Pokolenie_17_Bugimeny.121673.fb2  Gilden_Zvezdnyy-put_64_Lovushka-dlya-zvezdoleta.121670.fb2  Graf_Zvezdnyy-put_62_Smertelnyy-otschet.121668.fb2  Keri_Poslednyaya_granitsa.26383.fb2  Keri_Zvezdnyiy_put_29_Drednout.121662.fb2  Krendall_Zvezdnyy-put_63_Igra-bez-vyigrysha.121669.fb2  Makintayr_Zvezdnyiy_put_17_V_Poiskah_Spoka.121678.fb2  Makintayr_Zvezdnyiy_put_7_Gnev_Kana.121579.fb2  Rivz-Stivens_Zvezdnyiy_put_42_Prima_Memori.121439.fb2  Vardeman_Zvezdnyiy_put_12_Myatezh_Na_Enterprayze.121677.fb2  Vaynstayn_Zvezdnyiy_put_4_Pretendent_na_prestol.93329.fb2  Vornholt_Zvezdnyy-put_61_Svyatilishche.121667.fb2  Yepp_Zvezdnyiy_put_22_Vlastelin_Prizrakov.93338.fb2  draft_De_Viz_Zvezdnyiy_put_32_Tsepnaya_ataka.93343.fb2
autiobook/: __init__.py  audio.py  config.py  design.py  dramatize.py  env.py  epub.py  export.py  fb2.py  llm.py  llm_server.py  main.py  pooling.py  resume.py  showcase.py  tts.py  utils.py
autiobook/BOOKS/: De-Viz_Zvezdnyy-put_55_Predatel.93346.fb2  Dillard_Zvezdnyy-put-Movies_5_Posledniy-Rubezh.121661.fb2  Dueyn_Drug-moy-vrag-moy.121624.fb2  Dueyn_Mir_Spoka.121645.fb2  Dueyn_Zvezdnyiy_put_13_Izranennoe_nebo.14237.fb2  Dvorkin_Zvezdnyiy_put_40_Lovushka_vo_vremeni.121676.fb2  Fridman_Zvezdnyiy_put_45_Dvoynik.93344.fb2  Fridman_Zvezdnyy-put_58_Liki-ognya.121666.fb2  Gilden_Zvezdnyy-Put-Novoe-Pokolenie_17_Bugimeny.121673.fb2  Gilden_Zvezdnyy-put_64_Lovushka-dlya-zvezdoleta.121670.fb2  Graf_Zvezdnyy-put_62_Smertelnyy-otschet.121668.fb2  Hembli_Zvezdnyiy_put_23_Ishmael.93339.fb2  Karrey_Zvezdnyiy_put_6_Obitel_Zhizni.121578.fb2  Klouz_Zvezdnyiy_put_49_Printsip_Pandoryi.121440.fb2  Krendall_Zvezdnyy-put_63_Igra-bez-vyigrysha.121669.fb2  Marshaki_Zvezdnyiy_put_9_Treugolnik.93332.fb2  Vardeman_Zvezdnyiy_put_3_Gambit_klingonov.93328.fb2  Vornholt_Zvezdnyy-put_61_Svyatilishche.121667.fb2
tests/: check_speed.py  test_dramatize.py  test_e2e.sh  test_e2e_dramatize.sh  test_fb2.py  test_llm.py  test_mps.py  test_pooling.py  test_showcase.py
workdir/gambit/audition/: state.json
workdir/gambit/cast/: characters.json  state.json
workdir/gambit/extract/: 01_Глава_1.txt  02_Глава_2.txt  03_Глава_3.txt  04_Глава_4.txt  05_Глава_5.txt  06_Глава_6.txt  07_Глава_7.txt  (+6 more)
(+4 files in other folders)
